[package]
name = "tokio_svr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rtcp"
path = "src/main.rs"

[dependencies]
features = "0.10"
tokio = { version = "1", features = [
    "net",
    "rt-multi-thread",
    "macros",
    "io-util",
    "sync",
] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = "0.3" # 為了使用 StreamExt 的 next() 方法
httparse = "1.8" # 專為異步流設計的高性能 HTTP 解析器

sqlx = { version = "0.9", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls-ring",
    "macros",
    "time",
] }
sqlx-core = "0.9"
sqlx-postgres = "0.9"

# clap = "4.5" # terminal cmd param
config = "0.15"

serde = "1.0.213"
serde_json = "1.0.137"

# tracing = { version = "0.1.35", features = ["std"] }
# tracing-core = "0.1.28"
# tracing-subscriber = { version = "0.3.0", features = ["registry", "std"] }
# tracing-appender = "0.2"
# tracing-log = { version = "0.2.0", default-features = false, optional = true }